# usda-package

./: .gitignore  Pipfile  README.md  example.ipynb  example.py  pyproject.toml
data/: FASService.csv  FULL_file.xlsx  MARSService.csv  NASSService.csv
docs/: Specification.docx  USDA Diagram.drawio
src/usda/api/services/: __init__.py  _base.py  fas.py  mars.py  nass.py
src/usda/api/utils/: data_manipulation.py  merge_and_savefile.py  prepare_path.py
