[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usda"
version = "0.0.2"
authors = [
  { name="Eldar Gazizov", email="kursus1010@gmail.com" },
]
description = "A USDA APIs endpoints handler"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==1.4.3",
    "requests==2.28.1",
    "matplotlib==3.5.2"
]

[project.urls]
"Homepage" = "https://github.com/akkagazizov/usda-package"